# familytree

./: .coverage  .gitignore  BUILD  MODULE.bazel  README.md  family_tree.proto  family_tree.py  package-lock.json  pyproject.toml  requirements.in  requirements_lock.txt  requirements_lock_windows.txt  utils.proto
familytree/: add_person.py  app_state.py  chatbot.py  date_utils.py  exceptions.py  export.py  family_tree_app.py  family_tree_gui.py  family_tree_handler.py  family_tree_webapp.py  graph_handler.py  import_from_file.py  proto_handler.py  utils.py  utils_legacy.py
familytree/ai/: __init__.py  agent.py  executor_agents.py  planner_agent.py
familytree/handlers/: chat_handler.py  family_tree_handler.py  graph_handler.py  proto_handler.py
familytree/models/: base_model.py  chat_model.py  graph_model.py  manage_model.py
familytree/proto/: family_tree_pb2.py  family_tree_pb2.pyi  utils_pb2.py  utils_pb2.pyi
familytree/rendering/: pyvis_renderer.py
familytree/routers/: __init__.py  chat_router.py  graph_router.py  manage_router.py
familytree/utils/: date_utils.py  graph_types.py  id_utils.py  proto_utils.py  resource_utils.py
frontend/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/public/: index.html
frontend/public/scripts/: pyvis_interaction_script.js
frontend/src/: App.vue  main.js
frontend/src/components/: AboutTab.vue  AddPersonModal.vue  ConfirmationModal.vue  ContextMenu.vue  EditableField.vue  FamilyTreeChatbot.vue  GraphView.vue  LinkMemberModal.vue  ManageTreeTab.vue  MemberDetailsModal.vue  Sidebar.vue  StatusDisplay.vue
frontend/src/proto/: family_tree_pb.js  familymember.js  familytree.js  familyunit.js  gender.js  gregoriandate.js  paksham.js  relationships.js  tamilmonth.js  tamilstar.js  thithi.js  traditionaldate.js  utils_pb.js
proto/: family_tree.proto  utils.proto
resources/: about_section.html.template  pyvis_browser_interaction.js.template  pyvis_interaction.js.template  qwebchannel.js  system_prompt.txt
src/: family_tree_app.py  family_tree_gui.py  family_tree_handler.py
tests/: conftest.py  test_app_state.py  test_family_tree_handler.py  test_family_tree_handler_old.py  test_graph_handler_old.py  test_proto_handler.py  test_proto_handler_old.py  test_utils.py
tests/handlers/: conftest.py  test_chat_handler.py  test_family_tree_handler.py  test_graph_handler.py  test_proto_handler.py
tests/routers/: conftest.py  test_chat_router.py  test_graph_router.py  test_manage_router.py
tests/utils/: test_date_utils.py  test_id_utils.py  test_proto_utils.py  test_resource_utils.py
(+2 files in other folders)
