[project]
name = "familytree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.8",
    "networkx>=3.4.2",
    "protobuf>=6.30.2",
    "pyside6>=6.9.0",
    "pytest>=8.3.5",
    "pyvis>=0.3.2",
    "setuptools>=78.1.0",
]
