[project]
name = "familytree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.11.0",
    "grpcio-tools>=1.71.0",
    "networkx>=3.4.2",
    "protobuf>=4.21.5",
    "pyside6>=6.9.0",
    "pytest>=8.3.5",
    "pyvis>=0.3.2",
    "setuptools>=78.1.0",
]

[tool.pytest.ini_options]
# Add the project root directory (.) to Python's sys.path
pythonpath = [".", "./familytree"]

# Specify where pytest should look for tests (improves discovery speed)
testpaths = ["tests"]
